test, new website edit

--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@
         <div class="col-lg-4 d-flex mb-sm-4 ftco-animate">
           <div class="staff">
             <div class="d-flex mb-4">
-              <div class="img" style="background-image: url(images/sripfp.png);"></div>
+              <div class="img" style="background-image: url(images/srivarunk.webp);"></div>
               <div class="info ml-4">
                 <h3><a href="teacher-single.html">Srivarun Kankanala</a></h3>
                 <span class="position">Co-Founder</span>
@@ -251,10 +251,23 @@
       </div>
     </div>
   </section>
-
-
-
-
+  <div class="row" style="justify-content:center">
+        <div class="col-lg-4 d-flex mb-sm-4 ftco-animate">
+          <div class="staff"">
+            <div class=" d-flex mb-4">
+            <div class="img" style="background-image: url(images/IMG_2126.webp);"></div>
+            <div class="info ml-4">
+              <h3><a href="teacher-single.html">Sourav</a></h3>
+              <span class="position">Local Chapter President</span>
+              <div class="text">
+                <p> Sourav is a senior at Monroe Township High School. He is interested in business and finance, and enjoys sports and hanging with friends.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <footer class="ftco-footer ftco-section img">
     <div class="overlay"></div>
     <div class="container">
