about layout, added mahanth, changed details on home page

--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
                 <h3><a href="teacher-single.html">Rahil Patel</a></h3>
                 <span class="position">Co-Founder</span>
                 <div class="text">
-                  <p> Rahil is a current junior at Edison Academy Magnet School. He enjoys building websites & apps in
+                  <p> Rahil is a current senior at Edison Academy Magnet School. He enjoys building websites & apps in
                     addition to playing soccer. He's always looking for ways to help others.</p>
                 </div>
               </div>
@@ -157,7 +157,7 @@
                 <h3><a href="teacher-single.html">Isaac Chan</a></h3>
                 <span class="position">Co-Founder</span>
                 <div class="text">
-                  <p>Isaac is a current Sophmore at Edison Academy Magnet School. In addition to organizing food
+                  <p>Isaac is a current junior at Edison Academy Magnet School. In addition to organizing food
                     redistributions, he loves to cook, watch the Milawukee Bucks, and listen to music in his free time..
                   </p>
                 </div>
@@ -173,7 +173,7 @@
                 <h3><a href="teacher-single.html">Srivarun Kankanala</a></h3>
                 <span class="position">Co-Founder</span>
                 <div class="text">
-                  <p>Srivarun is a current Junior at Edison Academy Magnet School. A motivated individual, he plays
+                  <p>Srivarun is a current senior at Edison Academy Magnet School. A motivated individual, he plays
                     volleyball and loves shopping for clothes.</p>
                 </div>
               </div>
@@ -185,12 +185,26 @@
         <div class="col-lg-4 d-flex mb-sm-4 ftco-animate">
           <div class="staff">
             <div class="d-flex mb-4">
+              <div class="img" style="background-image: url(images/mahanth-pfp.jpg);"></div>
+              <div class="info ml-4">
+                <h3><a href="teacher-single.html">Mahanth Komuravelli</a></h3>
+                <span class="position">Co-Founder</span>
+                <div class="text">
+                  <p> Mahanth Komuravelli is a senior at Edison Academy Magnet School. He enjoys researching financial markets, implications with AI and food insecurity, and watching lions!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 d-flex mb-sm-4 ftco-animate">
+          <div class="staff">
+            <div class="d-flex mb-4">
               <div class="img" style="background-image: url(images/alexpfp.jpg);"></div>
               <div class="info ml-4">
                 <h3><a href="teacher-single.html">Alexander Poon</a></h3>
                 <span class="position">Webmaster</span>
                 <div class="text">
-                  <p> Alexander Poon is a freshman at Edison Academy Magnet Schoool. He heads the development of the
+                  <p> Alexander Poon is a sophomore at Edison Academy Magnet Schoool. He heads the development of the
                     FoodFlow website. His intended major is Electrical Engineering and he enjoys coding and playing a
                     variety of sports in his free time.</p>
                 </div>
@@ -201,20 +215,21 @@
         <div class="col-lg-4 d-flex mb-sm-4 ftco-animate">
           <div class="staff">
             <div class="d-flex mb-4">
-              <div class="img" style="background-image: url(images/manya-pfp.jpg);"></div>
+              <div class="img" style="background-image: url(images/avika-pfp.jpg);"></div>
               <div class="info ml-4">
-                <h3><a href="teacher-single.html">Manya Reddy Elugoti</a></h3>
+                <h3><a href="teacher-single.html">Avika Shukla</a></h3>
                 <span class="position">Director of Marketing</span>
                 <div class="text">
-                  <p>Manya is a freshman at Edison Academy Magnet School. She's extremely passionate about introducing
-                    FoodFlow to her community! She focuses on curating captivating artworks and designs for FoodFlow's
-                    website and social media platforms. Outside of FoodFlow, she loves to play volleyball, bake, and
-                    spend time with her friends!</p>
+                  <p> Avika is a current sophomore at the Edison Academy Magnet School. She spearheads promotional
+                    strategies & analyzes social media analytics for FoodFlow social media accounts. In her time, she
+                    enjoys playing chess, listening to music, and hanging out with her friends.</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
+      <div class="row">
         <div class="col-lg-4 d-flex mb-sm-4 ftco-animate">
           <div class="staff">
             <div class="d-flex mb-4">
@@ -223,7 +238,7 @@
                 <h3><a href="teacher-single.html">Ishan Nagpal</a></h3>
                 <span class="position">Director of Expansion</span>
                 <div class="text">
-                  <p>Ishan is a current freshman at Edison Academy Magnet School. Besides conducting outreach & always
+                  <p>Ishan is a current sophomore at Edison Academy Magnet School. Besides conducting outreach & always
                     offering new ideas for FoodFlow, he loves to play soccer on the school's varsity team and is a huge
                     fan of Manchester City.</p>
                 </div>
@@ -231,42 +246,25 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="row" style="justify-content:center">
         <div class="col-lg-4 d-flex mb-sm-4 ftco-animate">
-          <div class="staff"">
-            <div class=" d-flex mb-4">
-            <div class="img" style="background-image: url(images/avika-pfp.jpg);"></div>
-            <div class="info ml-4">
-              <h3><a href="teacher-single.html">Avika Shukla</a></h3>
-              <span class="position">Director of Marketing</span>
-              <div class="text">
-                <p> Avika is a current freshman at the Edison Academy Magnet School. She spearheads promotional
-                  strategies & analyzes social media analytics for FoodFlow social media accounts. In her time, she
-                  enjoys playing chess, listening to music, and hanging out with her friends.</p>
+            <div class="staff">
+              <div class="d-flex mb-4">
+                <div class="img" style="background-image: url(images/manya-pfp.jpg);"></div>
+                <div class="info ml-4">
+                  <h3><a href="teacher-single.html">Manya Reddy Elugoti</a></h3>
+                  <span class="position">Director of Marketing</span>
+                  <div class="text">
+                    <p>Manya is a sophomore at Edison Academy Magnet School. She's extremely passionate about introducing
+                      FoodFlow to her community! She focuses on curating captivating artworks and designs for FoodFlow's
+                      website and social media platforms. Outside of FoodFlow, she loves to play volleyball, bake, and
+                      spend time with her friends!</p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <div class="row" style="justify-content:center">
-        <div class="col-lg-4 d-flex mb-sm-4 ftco-animate">
-          <div class="staff"">
-            <div class=" d-flex mb-4">
-            <div class="img" style="background-image: url(images/IMG_2126.webp);"></div>
-            <div class="info ml-4">
-              <h3><a href="teacher-single.html">Sourav</a></h3>
-              <span class="position">Local Chapter President</span>
-              <div class="text">
-                <p> Sourav is a senior at Monroe Township High School. He is interested in business and finance, and enjoys sports and hanging with friends.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   </section>
   <footer class="ftco-footer ftco-section img">
     <div class="overlay"></div>
